Enable tests on camel-ignite on JDK 9+