@@ -97,22 +97,24 @@
         </dependency>
 
     </dependencies>
-
     <profiles>
         <profile>
             <id>jdk9+-build</id>
             <activation>
                 <jdk>[9,)</jdk>
             </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>xalan</groupId>
+                    <artifactId>xalan</artifactId>
+                </dependency>
+            </dependencies>
             <build>
                 <plugins>
                     <plugin>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <excludes>
-                                <!-- TODO: See https://issues.apache.org/jira/browse/IGNITE-4615 for more information. -->
-                                <exclude>**/**.java</exclude>
-                            </excludes>
+                            <argLine>--add-opens java.base/jdk.internal.misc=ALL-UNNAMED</argLine>
                         </configuration>
                     </plugin>
                 </plugins>
